# knowledge-chatbox

./: .dockerignore  .editorconfig  .env.example  .gitignore  .impeccable.md  .pre-commit-config.yaml  AGENTS.md  AGENT_LEARNINGS.md  CONTRIBUTING.md  README.md  TODOS.md  docker-compose.yml  justfile  lefthook.yml  package.json  reset-local-data.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.test.toml  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_schema.py
apps/api/src/knowledge_chatbox_api/: __init__.py  main.py
apps/api/src/knowledge_chatbox_api/api/: deps.py  error_responses.py  openapi.py
apps/api/src/knowledge_chatbox_api/api/routes/: auth.py  chat.py  documents.py  health.py  settings.py  users.py
apps/api/src/knowledge_chatbox_api/api/routes/_common/: __init__.py  transforms.py
apps/api/src/knowledge_chatbox_api/core/: config.py  errors.py  logging.py  observation.py  security.py  service_builders.py
apps/api/src/knowledge_chatbox_api/db/: base.py  session.py
apps/api/src/knowledge_chatbox_api/models/: __init__.py  auth.py  chat.py  document.py  enums.py  retrieval_chunk.py  settings.py  space.py
apps/api/src/knowledge_chatbox_api/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  health.py  ollama_provider.py  ollama_url.py  openai_provider.py  voyage_provider.py
apps/api/src/knowledge_chatbox_api/repositories/: auth_session_repository.py  base.py  chat_repository.py  chat_run_event_repository.py  chat_run_repository.py  document_repository.py  rate_limit_repository.py  retrieval_chunk_repository.py  settings_repository.py  space_repository.py  user_repository.py
apps/api/src/knowledge_chatbox_api/schemas/: __init__.py  _validators.py  auth.py  chat.py  chunk.py  common.py  document.py  error.py  settings.py  types.py  user.py
apps/api/src/knowledge_chatbox_api/services/auth/: __init__.py  auth_service.py  rate_limit_service.py  user_service.py
apps/api/src/knowledge_chatbox_api/services/chat/: __init__.py  attachment_metadata.py  chat_application_service.py  chat_persistence_service.py  chat_run_service.py  chat_service.py  chat_stream_presenter.py  pending_stream_cancel_registry.py  prompt_attachment_service.py  retrieval_service.py  retry_service.py  runtime_settings.py  stream_events.py  workflow_stream_runner.py
apps/api/src/knowledge_chatbox_api/services/chat/retrieval/: __init__.py  context_builder.py  models.py  policy.py  querying.py
apps/api/src/knowledge_chatbox_api/services/chat/workflow/: __init__.py  agent.py  chat_workflow.py  deps.py  deps_factory.py  event_bridge.py  instructions.py  model_factory.py  output.py  tools.py
apps/api/src/knowledge_chatbox_api/services/documents/: __init__.py  chunking_service.py  constants.py  errors.py  indexing_service.py  ingestion_service.py  normalization_service.py  parsers.py  query_service.py  rebuild_service.py  upload_readiness.py  versioning_service.py
apps/api/src/knowledge_chatbox_api/services/settings/: __init__.py  runtime_settings.py  settings_service.py
apps/api/src/knowledge_chatbox_api/tasks/: document_jobs.py
apps/api/src/knowledge_chatbox_api/utils/: chroma.py  compat.py  document_types.py  embedding_cache.py  files.py  hashing.py  helpers.py  image.py  settings_helpers.py  text_matching.py  timing.py
apps/api/tests/: conftest.py  test_chroma.py  test_embedding_cache.py  test_error_contract.py  test_health.py  test_openapi_contract.py  test_startup.py  test_structured_logging.py
apps/api/tests/auth/: test_auth_api.py  test_auth_service.py  test_auth_session_repository.py  test_user_service.py
apps/api/tests/chat/: test_chat_api.py  test_chat_equivalence.py  test_chat_repository.py  test_chat_run_service.py  test_chat_service.py  test_chat_stream_api.py  test_provider_factory.py  test_provider_streaming.py  test_retry_service.py
apps/api/tests/documents/: test_indexing_service.py  test_ingestion_api.py  test_versioning_service.py
apps/api/tests/fixtures/: __init__.py  dummies.py  factories.py  helpers.py  runtime.py  stubs.py
apps/api/tests/integration/auth/: test_auth_api.py
apps/api/tests/integration/chat/: test_attachment_metadata.py  test_chat_api.py  test_chat_context_api.py  test_chat_equivalence.py  test_chat_run_service.py  test_chat_stream_api.py  test_provider_streaming.py  test_streaming_resilience.py
apps/api/tests/integration/documents/: test_ingestion_api.py  test_upload_streaming.py
apps/api/tests/migrations/: test_migrations_smoke.py
apps/api/tests/runtime/: test_dev_entrypoints.py  test_repo_surface_check.py  test_reset_local_data.py  test_runtime_architecture.py  test_shell_script_layout.py
apps/api/tests/settings/: test_settings_service.py
apps/api/tests/unit/: test_factories.py  test_password_validators.py
apps/api/tests/unit/auth/: test_auth_service.py  test_auth_session_repository.py  test_user_service.py
apps/api/tests/unit/chat/: test_chat_repository.py  test_chat_service.py  test_chat_workflow.py  test_chat_workflow_agent.py  test_chat_workflow_bootstrap.py  test_chat_workflow_event_bridge.py  test_chat_workflow_model_factory.py  test_prompt_attachment_service.py  test_provider_factory.py  test_retrieval_modules.py  test_retrieval_service.py  test_retry_service.py  test_workflow_output.py
apps/api/tests/unit/core/: test_api_test_helpers.py  test_observation.py  test_runtime_fixtures.py  test_service_builders.py  test_stub_helpers.py
apps/api/tests/unit/documents/: test_document_jobs.py  test_indexing_service.py  test_normalization_service.py  test_versioning_service.py
apps/api/tests/unit/settings/: test_settings_service.py
apps/api/tests/unit/utils/: test_embedding_cache.py
apps/web/: .dockerignore  .eslintignore  (+15 more)
docs/: code-optimization-report.md
scripts/: check_repo_surface.py  dev-run.sh  docker-deploy.sh  export_openapi.py  reset-local-data.sh
(+410 files in other folders)
