[project]
name = "knowledge-chatbox-api"
version = "0.1.0"
description = "Local-first API service for Knowledge Chatbox"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.135.3",
  "asgi-correlation-id>=4.3.4",
  "pydantic-settings>=2.13.1",
  "uvicorn>=0.44.0",
  "sqlalchemy>=2.0.49",
  "alembic>=1.13.0",
  "chromadb>=1.1.0",
  "pymupdf>=1.27.2.2",
  "python-docx>=1.2.0",
  "openai>=2.30.0",
  "python-multipart>=0.0.24",
  "pillow>=12.2.0",
  "argon2-cffi>=25.1.0",
  "PyJWT>=2.12.1",
  "httpx>=0.28.1",
  "orjson>=3.11.8",
  "structlog>=25.5.0",
  "anthropic>=0.89.0",
  "ollama>=0.6.1",
  "Pygments>=2.20.0",
  "pydantic-ai-slim[openai,anthropic,logfire]>=1.77.0,<1.78.0",
  "chonkie>=1.6.2,<1.7.0",
  "tenacity>=9.1.2,<9.2.0",
  "cachetools>=5.5.0",
  "sse-starlette>=2.2.0",
  "advanced-alchemy>=1.4.0",
  "yarl>=1.23.0",
]

[project.scripts]
knowledge-chatbox-api = "knowledge_chatbox_api:main"

[dependency-groups]
dev = [
  "basedpyright>=1.39.0",
  "polyfactory>=3.3.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=7.1.0",
  "pytest-httpx>=0.36.0",
  "ruff>=0.15.9",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
  "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
  "e2e: marks tests as end-to-end tests",
  "requires_db: marks tests that require database",
  "requires_chroma: marks tests that require ChromaDB",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "SIM",
    "RUF",
    "C4",
    "TCH",
    "PT",
    "PERF",
    "FLY",
    "DTZ",
    "LOG",
    "T20",
    "ARG",
    "PTH",
    "RET",
    "N",
    "S",
]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.field_validator"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "S108", "S603", "S607", "ARG", "PT028", "RUF012"]
"src/**" = ["PT028"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src"]
reportMissingTypeStubs = false
reportAny = false
reportExplicitAny = false
reportUnusedParameter = true
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportMissingParameterType = false
reportMissingTypeArgument = false
reportPrivateUsage = true
reportUnknownLambdaType = false
reportUnnecessaryCast = true
reportUnnecessaryIsInstance = true
reportUnnecessaryComparison = true
reportInvalidTypeForm = true
reportUnusedFunction = false
reportArgumentType = true
reportAttributeAccessIssue = true
reportCallIssue = true
reportReturnType = false
reportGeneralTypeIssues = false
reportIncompatibleMethodOverride = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypeCommentUsage = true
reportConstantRedefinition = true
reportDeprecated = true
reportDuplicateImport = true
reportIncompleteStub = true
reportInconsistentConstructor = true
reportMatchNotExhaustive = true
reportMissingModuleSource = true
reportUntypedClassDecorator = true
reportUntypedFunctionDecorator = true
reportUntypedNamedTuple = true

[tool.coverage.run]
source = ["src/knowledge_chatbox_api"]
branch = true
omit = ["*/tests/*", "*/migrations/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true

[tool.coverage.html]
directory = "htmlcov"
